# plaza

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: ci.yml
docs/: theming.md
src/: app.rs  config.rs  event.rs  main.rs  model.rs
src/action/: runner.rs
src/search/: aggregator.rs
src/sources/: apt.rs  aur.rs  flatpak.rs  installed.rs  mod.rs  pacman.rs  updates.rs
src/theme/: color.rs  mod.rs  palette.rs  skin.rs
src/theme/palettes/: ansi.toml  catppuccin-mocha.toml  dracula.toml  gruvbox.toml  nord.toml  solarized-dark.toml  tokyo-night.toml
src/theme/skins/: plain.toml  sharp.toml
src/ui/: detail.rs  filter.rs  main_view.rs  manage_detail.rs  mod.rs  search_bar.rs  sidebar.rs  status_bar.rs  task_pane.rs  welcome.rs
