[package]
name = "plaza"
version = "0.1.0"
edition = "2021"
description = "Cross-distro TUI package manager browser"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2.3"
async-trait = "0.1"
anyhow = "1"
