[package]
name = "plaza"
version = "0.7.0"
edition = "2021"
description = "Cross-distro TUI package manager browser"
license = "GPL-3.0-or-later"
repository = "https://github.com/StaszeKrk/plaza"

[package.metadata.deb]
maintainer = "staszek <staszekborkowski7@gmail.com>"
copyright = "2026 staszek"
section = "utils"
priority = "optional"
extended-description = """\
Plaza searches apt and Flathub at the same time, merges results by package
name, shows per-source detail, and installs from a non-blocking background
terminal pane. On Arch it also covers pacman repos and the AUR."""
assets = [
    ["target/release/plaza", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/plaza/README.md", "644"],
]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2.3"
async-trait = "0.1"
anyhow = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.8"
libc = "0.2"
tui-term = "0.2"
vt100 = "0.15"
futures = "0.3"
toml = "0.8"
